--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -25,6 +25,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link" href="https://github.com/vyasrc/">GitHub</a>
           <a class="nav-item nav-link" href="https://www.linkedin.com/in/vyas-cholayil/">Linkedin</a>
           <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
           <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
